--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,25 @@
-services:
 #    al_da_flux_game_quizz.example:
 #        class: Aldaflux\GameQuizzBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+services:
+    _defaults:
+        autowire: true
+
+    Aldaflux\GameQuizzBundle\Repository\:
+        resource: ../../Repository  
+        tags: ['doctrine.repository_service']
+
+    Aldaflux\GameQuizzBundle\Command\GameListCommand:
+        tags:
+            - { name: 'console.command', command: 'game:list' }
+    Aldaflux\GameQuizzBundle\Command\SoundTestFileCommand:
+        tags:
+            - { name: 'console.command', command: 'game:sound-test' }
+    Aldaflux\GameQuizzBundle\Command\WavToMp3Command:
+        tags:
+            - { name: 'console.command', command: 'game:sound-tomp3' }
+    Aldaflux\GameQuizzBundle\Command\BuildCordovaCommand:
+        tags:
+            - { name: 'console.command', command: 'game:build-cordova' }
+        
+        
